# youtube-shorts-pipeline

./: .env.example  .gitignore  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  DOCKER_OLLAMA_SETUP.md  FREE_STACK_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_FREE.md  README.md  README_FULL_IMPLEMENTATION.md  SKILL.md  STACK_COMPARISON.md  V2_QUICK_START.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: research-image-to-video-apis.md  research-quality-overhaul-v2.md
niches/: agentic_workflows.yaml  ai.yaml  education.yaml  finance.yaml  fitness.yaml  gaming.yaml  reddit_stories.yaml  science.yaml  tech.yaml
pipeline/: __init__.py  __main__.py  adapter.py  assemble.py  broll.py  captions.py  config.py  draft.py  log.py  music.py  retry.py  sfx.py  state.py  stock_footage.py  thumbnail.py  upload.py  video_gen.py  voiceover.py
references/: setup.md  troubleshooting.md
remotion/: package-lock.json  package.json  tsconfig.json
research/: 2026-04-03-script-tts-research.md  first-video-topic-analysis.md  youtube-shorts-niche-analysis-2025-2026.md
scripts/: install_comfyui_m1.sh  install_kokoro_tts.sh  n8n_workflow_full_async.json  n8n_workflow_reddit_stories.json  n8n_workflow_reddit_stories_v2.json  pipeline.py  run_reddit_stories.sh  setup_docker_stack.sh  setup_v2_production.sh  setup_youtube_oauth.py
tests/: test_adapter.py  test_broll.py  test_broll_parallel.py  test_captions.py  test_draft.py  test_engine.py  test_minimax.py  (+7 more)
(+193 files in other folders)
